crimson/onode-staged-tree: add initial onode staged-fltree
Support basic insert and lookup operations, tested by an isolated dummy
backend, and also a solution to integrate with seastore
TransactionManager and LogicalCachedExtent.

Signed-off-by: Yingxin Cheng <yingxin.cheng@intel.com>

--- a/src/test/crimson/seastore/onode_tree/CMakeLists.txt
+++ b/src/test/crimson/seastore/onode_tree/CMakeLists.txt
@@ -6,3 +6,10 @@ target_link_libraries(test-seastore-onode-tree-node
   GTest::Main
   crimson-os
   crimson-common)
+
+add_executable(unittest_staged_fltree
+  test_staged_fltree.cc
+  ../../gtest_seastar.cc)
+add_ceph_unittest(unittest_staged_fltree)
+target_link_libraries(unittest_staged_fltree
+  crimson-seastore)
