[RFC] libpmem2 integration and test code
Signed-off-by: Yingxin Cheng <yingxin.cheng@intel.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -319,7 +319,7 @@ set_target_properties(Boost::MPL PROPERTIES
   INTERFACE_COMPILE_DEFINITIONS
     "BOOST_MPL_CFG_NO_PREPROCESSED_HEADERS;BOOST_MPL_LIMIT_LIST_SIZE=30")
 
-if(WITH_BLUESTORE_PMEM OR WITH_RBD_RWL)
+if(WITH_BLUESTORE_PMEM OR WITH_RBD_RWL OR WITH_SEASTORE_PMEM)
   if(WITH_SYSTEM_PMDK)
     if(WITH_BLUESTORE_PMEM)
       find_package(pmem REQUIRED COMPONENTS pmem)
