--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,13 @@ if(WITH_BLUESTORE_PMEM)
   set(HAVE_BLUESTORE_PMEM ON)
 endif()
 
+CMAKE_DEPENDENT_OPTION(WITH_SEASTORE_PMEM "Enable Seastore with PMem support" OFF
+  "WITH_SEASTAR" OFF)
+
+if(WITH_SEASTORE_PMEM)
+  set(HAVE_SEASTORE_PMEM ON)
+endif()
+
 CMAKE_DEPENDENT_OPTION(WITH_SPDK "Enable SPDK" OFF
   "CMAKE_SYSTEM_PROCESSOR MATCHES i386|i686|amd64|x86_64|AMD64|aarch64" OFF)
 if(WITH_SPDK)
